finops_dashboard.log
  File "enhanced_integrated_dashboard.py", line 660
    if prompt := st.chat_input("Ask me about costs, budgets, savings, or optimizations..."):
               ^
SyntaxError: invalid syntax
